[package]
name = "bulletproof-kzen"
version = "1.2.1"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]
license = "GPL-3.0"
description = "Implementation of Bulletproofs and Bulletproofs+ aggregated range proofs with multi-exponent verification"
repository = "https://github.com/ZenGo-X/bulletproofs"
categories = ["cryptography", "algorithms"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]

[lib]
name = "bulletproof"
crate-type = ["lib"]

[dependencies]
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
curv-kzen = { version = "0.10", default-features = false }
sha2 = "0.9"
generic-array = "0.14"

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false
